--- a/utilisateur.properties
+++ b/utilisateur.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:9091/user?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:9091/utilisateur?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password =
