--- a/MicroserviceEureka.properties
+++ b/MicroserviceEureka.properties
@@ -1,4 +1,4 @@
 eureka.client.registeryWithEureka= false
 eureka.client.fetchRegistry=false
-eureka.client.serviceUrl.defaultZone.uri=http//localhost:9999/eureka
+eureka.client.serviceUrl.defaultZone=http//localhost:9999/eureka
 management.endpoint.web.exposure.include=refresh
